--- a/Views/Home/ContactForm.cshtml
+++ b/Views/Home/ContactForm.cshtml
@@ -5,30 +5,23 @@
 }
 
 <div id="contactFormDiv">
-    <div class="row">
-        <div class="col-sm">
+    <h1 class="display-4">Contact Me</h1>
+    <form>
+        <div class="form-group">
+            <label for="inputFullname">Full Name:</label>
+            <input type="text" class="form-control" id="exampleInputFullname" placeholder="Full Name">
         </div>
-        <div class="col-sm">
-            <form>
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                </div>
-                <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+        <div class="form-group">
+            <label for="inputEmail">Email Address:</label>
+            <input type="email" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email">
         </div>
-        <div class="col-sm">
+        <div class="form-group">
+            <label for="inputMessage">Message:</label>
+            <textarea class="form-control" id="exampleInputMessage" rows="3"></textarea>
         </div>
-    </div>
 
+        <button type="button" class="btn btn-primary">Submit</button>
+    </form>
+    
 </div>
 
