--- a/wwwroot/css/ContactForm.css
+++ b/wwwroot/css/ContactForm.css
@@ -1,6 +1,19 @@
 ﻿
 
-#contactFormDiv{
+#contactFormDiv {
     width: 120vw;
     height: 50vh;
+    background-color: #f0f0f0;
 }
+
+    #contactFormDiv h1 {
+        margin-left: 35vw;
+    }
+
+    #contactFormDiv form {
+        width: 30vw;
+        margin-right: 35vw;
+        margin-left: 35vw;
+    }
+
+      
