--- a/wwwroot/css/Home.css
+++ b/wwwroot/css/Home.css
@@ -1,6 +1,6 @@
 ﻿
 #homeDiv {
-    background-image: url("https://evanallen13files.blob.core.windows.net/background/bs4.jpg");
+    background-image: url("https://evanallen13storage.blob.core.windows.net/background/bigsur.jpg");
     background-size: 100vw 100vh;
     width: 99vw;
     height: 100vh;
