--- a/Views/Home/ContactForm.cshtml
+++ b/Views/Home/ContactForm.cshtml
@@ -10,15 +10,23 @@
     <form>
         <div class="form-group">
             <label for="inputFullname">Full Name:</label>
-            <input type="text" class="form-control" id="exampleInputFullname" placeholder="Full Name">
+            <input type="text" class="form-control" id="inputFullname" placeholder="Full Name">
+        </div>
+        <div class="form-group">
+            <label for="inputCompany">Company:</label>
+            <input type="text" class="form-control" id="inputCompany" placeholder="Company">
         </div>
         <div class="form-group">
             <label for="inputEmail">Email Address:</label>
-            <input type="email" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email">
+            <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter Email">
+        </div>
+        <div class="form-group">
+            <label for="inputPhone">Phone:</label>
+            <input type="tel" class="form-control" id="inputPhone" placeholder="Enter Phone">
         </div>
         <div class="form-group">
             <label for="inputMessage">Message:</label>
-            <textarea class="form-control" id="exampleInputMessage" rows="3"></textarea>
+            <textarea class="form-control" id="inputMessage" rows="3"></textarea>
         </div>
 
         <button type="button" class="btn btn-primary" onclick="formSubmit()">Submit</button>
