--- a/wwwroot/css/ContactForm.css
+++ b/wwwroot/css/ContactForm.css
@@ -2,7 +2,7 @@
 
 #contactFormDiv {
     width: 99vw;
-    height: 65vh;
+    height: 100%;
     background-color: #f0f0f0;
     background-image: url("https://evanallen13storage.blob.core.windows.net/background/download.jfif");
     background-size: 100vw 100vh;
