--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,12 +21,12 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1 nav navbar-right">
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link text-light" href="#homeDiv">Home</a>
-                        </li>
-                        <li class="nav-item">
+                        </li>*@
+                        @*<li class="nav-item">
                             <a class="nav-link text-light" href="#contactFormDiv">Contact Me</a>
-                        </li>
+                        </li>*@
                     </ul>
                 </div>
             </div>
