--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,6 +20,20 @@
             <a href="https://www.linkedin.com/in/evanallen13/" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-linkedin fa-4x" style="color:#ef5939" title="www.linkedin.com/in/evanallen13/"></i>
             </a>
+
+            <a href="https://www.linkedin.com/in/evanallen13/" target="_blank" rel="noopener noreferrer">
+                <span class="fa-stack fa-2x" style="display: inline; color: #ef5939" title="www.linkedin.com/in/evanallen13/">
+                    <i class="fas fa-square fa-stack-2x"></i>
+                    <i class="fab fa-linkedin fa-stack-1x fa-inverse" style="margin-left: 20px"></i>
+                </span>
+            </a>
+
+            <a href="https://evanallen13storage.blob.core.windows.net/files/EvanAllen_Resume.pdf" target="_blank" rel="noopener noreferrer">
+                <span class="fa-stack fa-2x" style="display: inline; color: #ef5939" title="Résumé">
+                    <i class="fas fa-square fa-stack-2x"></i>
+                    <i class="far fa-file-pdf fa-stack-1x fa-inverse" style="margin-left: 20px"></i>
+                </span>
+            </a>
         </div>
     </div>
     <div class="col-6">
